collapsed event position fixed

--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -89,6 +89,11 @@ a {
   margin: 0 !important;
 }
 
+.fc-timegrid-event-harness-inset {
+  left: 0 !important;
+  right: 0 !important;
+}
+
 .fc-event-main-frame {
   padding: 0.5em;
   display: flex;
